Add config for deploying to github packages
- Use maven-surefire-plugin to get maven test work