@@ -102,15 +102,10 @@
   </dependencies>
 
   <distributionManagement>
-    <snapshotRepository>
-      <id>sonatype-nexus-snapshots</id>
-      <name>Sonatype Nexus Snapshots</name>
-      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
-    </snapshotRepository>
     <repository>
-      <id>sonatype-nexus-staging</id>
-      <name>Nexus Release Repository</name>
-      <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+      <id>prerender-java</id>
+      <name>GitHub philipjkim Apache Maven Packages</name>
+      <url>https://maven.pkg.github.com/philipjkim/prerender-java</url>
     </repository>
   </distributionManagement>
 
@@ -130,7 +125,18 @@
             <arg>java.base/sun.security.util=ALL-UNNAMED</arg>
             <arg>--add-exports</arg>
             <arg>java.base/jdk.internal.misc=ALL-UNNAMED</arg>
-            <arg>-Xlint:unchecked</arg>
+            <arg>--add-exports</arg>
+            <arg>java.base/java.lang=ALL-UNNAMED</arg>
+            <arg>--add-exports</arg>
+            <arg>java.base/java.lang.reflect=ALL-UNNAMED</arg>
+            <arg>--add-exports</arg>
+            <arg>java.base/java.io=ALL-UNNAMED</arg>
+            <arg>--add-exports</arg>
+            <arg>java.base/java.util=ALL-UNNAMED</arg>
+            <arg>--add-exports</arg>
+            <arg>java.base/java.time=ALL-UNNAMED</arg>
+            <arg>--add-exports</arg>
+            <arg>java.base/java.time.zone=ALL-UNNAMED</arg>
           </compilerArgs>
 
           <showWarnings>true</showWarnings>
@@ -149,7 +155,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-javadoc-plugin</artifactId>
-        <version>2.8.1</version>
+        <version>3.4.0</version>
         <executions>
           <execution>
             <id>attach-javadoc</id>
@@ -164,7 +170,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-source-plugin</artifactId>
-        <version>2.1.2</version>
+        <version>3.2.0</version>
         <executions>
           <execution>
             <id>attach-sources</id>
@@ -175,34 +181,17 @@
           </execution>
         </executions>
       </plugin>
+
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>3.0.0-M7</version>
+        <configuration>
+          <argLine>
+            --add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.lang.reflect=ALL-UNNAMED --add-opens=java.base/java.io=ALL-UNNAMED --add-opens=java.base/java.util=ALL-UNNAMED --add-opens=java.base/java.time=ALL-UNNAMED --add-opens=java.base/java.time.zone=ALL-UNNAMED
+          </argLine>
+        </configuration>
+      </plugin>
     </plugins>
   </build>
-  <profiles>
-    <profile>
-      <id>release-sign-artifacts</id>
-      <activation>
-        <property>
-          <name>performRelease</name>
-          <value>true</value>
-        </property>
-      </activation>
-      <build>
-        <plugins>
-          <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-gpg-plugin</artifactId>
-            <executions>
-              <execution>
-                <id>sign-artifacts</id>
-                <phase>verify</phase>
-                <goals>
-                  <goal>sign</goal>
-                </goals>
-              </execution>
-            </executions>
-          </plugin>
-        </plugins>
-      </build>
-    </profile>
-  </profiles>
 </project>
